--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "main": "app.coffee",
   "dependencies": {
     "coffee-script": "1.3.x",
-    "request": "2.21.x"
+    "request": "2.21.x",
+    "json2csv": "2.x"
   },
   "engines": {
     "node": "0.8.x",
